--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,6 +2,9 @@ name: Latest blog post workflow
 on: 
     schedule:
         - cron: '0 */12 * * *'
+    workflow_dispatch:
+permissions:
+    contents: write
 jobs: 
     update-readme-with-blog: 
         name: Update this repo's README with latest blog posts
@@ -10,5 +13,7 @@ jobs:
             - uses: actions/checkout@v3
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
-                max_post_count: "4"
+                max_post_count: "5"
                 feed_list: "https://stevenho.pro/rss.xml"
+
+
